<resources>
    <string name="app_name">Umbral Legacy</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="group_none_name">No group</string>
    <string name="group_none_member">Non-aligned</string>
    <string name="group_none_members">Non-aligneds</string>
    <string name="group_stillblood_name">&group_stillblood_name;</string>
    <string name="group_stillblood_member">&group_stillblood_member;</string>
    <string name="group_stillblood_members">&group_stillblood_members;</string>
    <string name="group_cursed_name">&group_cursed_name;</string>
    <string name="group_cursed_member">&group_cursed_member;</string>
    <string name="group_cursed_members">&group_cursed_members;</string>
    <string name="group_piercers_name">&group_piercers_name;</string>
    <string name="group_piercers_member">&group_piercers_member;</string>
    <string name="group_piercers_members">&group_piercers_members;</string>
    <string name="group_fae_name">&group_fae_name;</string>
    <string name="group_fae_member">&group_fae_member;</string>
    <string name="group_fae_members">&group_fae_members;</string>
    <string name="group_old_ones_name">&group_old_ones_name;</string>
    <string name="group_old_ones_member">&group_old_ones_member;</string>
    <string name="group_old_ones_members">&group_old_ones_members;</string>
    <string name="group_hellbound_name">&group_hellbound_name;</string>
    <string name="group_hellbound_member">&group_hellbound_member;</string>
    <string name="group_hellbound_members">&group_hellbound_members;</string>
    <string name="faction_vampires_name">&faction_vampires_name;</string>
    <string name="faction_vampires_member">&faction_vampires_member;</string>
    <string name="faction_vampires_members">&faction_vampires_members;</string>
    <string name="faction_nosferatu_name">&faction_nosferatu_name;</string>
    <string name="faction_nosferatu_member">&faction_nosferatu_member;</string>
    <string name="faction_nosferatu_members">&faction_nosferatu_members;</string>
    <string name="faction_wights_name">&faction_wights_name;</string>
    <string name="faction_wights_member">&faction_wights_member;</string>
    <string name="faction_wights_members">&faction_wights_members;</string>
    <string name="faction_zombies_name">&faction_zombies_name;</string>
    <string name="faction_zombies_member">&faction_zombies_member;</string>
    <string name="faction_zombies_members">&faction_zombies_members;</string>
    <string name="faction_lycanthropes_name">&faction_lycanthropes_name;</string>
    <string name="faction_lycanthropes_member">&faction_lycanthropes_member;</string>
    <string name="faction_lycanthropes_members">&faction_lycanthropes_members;</string>
    <string name="faction_animated_name">&faction_animated_name;</string>
    <string name="faction_animated_member">&faction_animated_member;</string>
    <string name="faction_animated_members">&faction_animated_members;</string>
    <string name="faction_totemic_spirits_name">&faction_totemic_spirits_name;</string>
    <string name="faction_totemic_spirits_member">&faction_totemic_spirits_member;</string>
    <string name="faction_totemic_spirits_members">&faction_totemic_spirits_members;</string>
    <string name="faction_witch_bound_name">&faction_witch_bound_name;</string>
    <string name="faction_witch_bound_member">&faction_witch_bound_member;</string>
    <string name="faction_witch_bound_members">&faction_witch_bound_members;</string>
    <string name="faction_warlocks_name">&faction_warlocks_name;</string>
    <string name="faction_warlocks_member">&faction_warlocks_member;</string>
    <string name="faction_warlocks_members">&faction_warlocks_members;</string>
    <string name="faction_elementals_name">&faction_elementals_name;</string>
    <string name="faction_elementals_member">&faction_elementals_member;</string>
    <string name="faction_elementals_members">&faction_elementals_members;</string>
    <string name="faction_bound_demons_name">&faction_bound_demons_name;</string>
    <string name="faction_bound_demons_member">&faction_bound_demons_member;</string>
    <string name="faction_bound_demons_members">&faction_bound_demons_members;</string>
    <string name="faction_magical_constructs_name">&faction_magical_constructs_name;</string>
    <string name="faction_magical_constructs_member">&faction_magical_constructs_member;</string>
    <string name="faction_magical_constructs_members">&faction_magical_constructs_members;</string>
    <string name="faction_horned_ones_name">&faction_horned_ones_name;</string>
    <string name="faction_horned_ones_member">&faction_horned_ones_member;</string>
    <string name="faction_horned_ones_members">&faction_horned_ones_members;</string>
    <string name="faction_unseelie_name">&faction_unseelie_name;</string>
    <string name="faction_unseelie_member">&faction_unseelie_member;</string>
    <string name="faction_unseelie_members">&faction_unseelie_members;</string>
    <string name="faction_wish_granters_name">&faction_wish_granters_name;</string>
    <string name="faction_wish_granters_member">&faction_wish_granters_member;</string>
    <string name="faction_wish_granters_members">&faction_wish_granters_members;</string>
    <string name="faction_trolls_name">&faction_trolls_name;</string>
    <string name="faction_trolls_member">&faction_trolls_member;</string>
    <string name="faction_trolls_members">&faction_trolls_members;</string>
    <string name="faction_great_old_ones_name">&faction_great_old_ones_name;</string>
    <string name="faction_great_old_ones_member">&faction_great_old_ones_member;</string>
    <string name="faction_great_old_ones_members">&faction_great_old_ones_members;</string>
    <string name="faction_cultists_name">&faction_cultists_name;</string>
    <string name="faction_cultists_member">&faction_cultists_member;</string>
    <string name="faction_cultists_members">&faction_cultists_members;</string>
    <string name="faction_ancient_race_name">&faction_ancient_race_name;</string>
    <string name="faction_ancient_race_member">&faction_ancient_race_member;</string>
    <string name="faction_ancient_race_members">&faction_ancient_race_members;</string>
    <string name="faction_yellow_masks_name">&faction_yellow_masks_name;</string>
    <string name="faction_yellow_masks_member">&faction_yellow_masks_member;</string>
    <string name="faction_yellow_masks_members">&faction_yellow_masks_members;</string>
    <string name="faction_architects_name">&faction_architects_name;</string>
    <string name="faction_architects_member">&faction_architects_member;</string>
    <string name="faction_architects_members">&faction_architects_members;</string>
    <string name="faction_doppelgangers_name">&faction_doppelgangers_name;</string>
    <string name="faction_doppelgangers_member">&faction_doppelgangers_member;</string>
    <string name="faction_doppelgangers_members">&faction_doppelgangers_members;</string>
    <string name="faction_marked_name">&faction_marked_name;</string>
    <string name="faction_marked_member">&faction_marked_member;</string>
    <string name="faction_marked_members">&faction_marked_members;</string>
    <string name="faction_hellspawn_name">&faction_hellspawn_name;</string>
    <string name="faction_hellspawn_member">&faction_hellspawn_member;</string>
    <string name="faction_hellspawn_members">&faction_hellspawn_members;</string>
    <string name="term_group">&term_group;</string>
    <string name="term_faction">&term_faction;</string>
    <string name="term_sacrifice_value">&term_sacrifice_value;</string>
    <string name="term_summon_cost">&term_summon_cost;</string>
    <string name="term_deck">&term_deck;</string>
    <string name="term_hand">&term_hand;</string>
    <string name="term_graveyard">&term_graveyard;</string>
    <string name="term_turn">&term_turn;</string>
    <string name="term_mana_ball">&term_mana_ball;</string>
    <string name="term_costs">&term_costs;</string>
    <string name="term_strength">&term_strength;</string>
    <string name="term_life">&term_life;</string>
    <string name="term_colorless">&term_colorless;</string>
    <string name="term_front_row">&term_front_row;</string>
    <string name="term_back_row">&term_back_row;</string>
    <string name="term_summoned">&term_summoned;</string>
    <string name="term_subservient">&term_subservient;</string>
    <string name="term_counter">&term_counter;</string>
    <string name="term_mana_pool">&term_mana_pool;</string>
    <string name="term_blood_price">&term_blood_price;</string>
    <string name="term_faction_ability">&term_faction_ability;</string>
    <string name="term_positive_ability">&term_positive_ability;</string>
    <string name="term_negative_ability">&term_negative_ability;</string>
    <string name="term_archetype_ability">&term_archetype_ability;</string>
    <string name="term_combat_ability">&term_combat_ability;</string>
    <string-array name="ability_types">
        <item>&term_faction_ability;</item>
        <item>&term_positive_ability;</item>
        <item>&term_negative_ability;</item>
        <item>&term_archetype_ability;</item>
        <item>&term_combat_ability;</item>
    </string-array>
    <string name="cards_text">There are %1$d cards currently in the database.</string>
    <string name="cards_button">Take me to Cards</string>
    <string name="abilities_text">There are %1$d abilities currently in the database.</string>
    <string name="abilities_button">Take me to Abilities</string>
    <string name="decks_text">There are %1$d decks currently in the database.</string>
    <string name="decks_button">Take me to Decks</string>
    <string name="game_text">There %1$s currently an active game.</string>
    <string name="game_button">Play Game</string>
    <string name="content_desc_card_image">Card Image</string>
    <string name="content_desc_cost_one_image">First &term_summon_cost; image: %1$s</string>
    <string name="content_desc_cost_two_image">Second &term_summon_cost; image: %1$s</string>
    <string name="content_desc_cost_three_image">Third &term_summon_cost; image: %1$s</string>
    <string name="content_desc_cost_four_image">Fourth &term_summon_cost; image: %1$s</string>
    <string name="content_desc_cost_five_image">Fifth &term_summon_cost; image: %1$s</string>
    <string name="content_desc_cost_six_image">Fifth &term_summon_cost; image: %1$s</string>
    <string name="content_desc_payment_one_image">First &term_sacrifice_value; image: %1$s</string>
    <string name="content_desc_payment_two_image">Second &term_sacrifice_value; image: %1$s</string>
    <string name="content_desc_payment_three_image">Third &term_sacrifice_value; image: %1$s</string>
    <string name="content_desc_payment_four_image">Fourth &term_sacrifice_value; image: %1$s</string>
    <string name="content_desc_payment_five_image">Fifth &term_sacrifice_value; image: %1$s</string>
    <string name="content_desc_attack_image">Attack value image: %1$d</string>
    <string name="content_desc_defense_image">Defense value image: %1$d</string>
    <string name="content_desc_archetypeImage">Archetype image: %1$s</string>
    <string name="content_desc_ability_one">First ability image: %1$s</string>
    <string name="content_desc_ability_two">Second ability image: %1$s</string>
    <string name="content_desc_ability_three">Third ability image: %1$s</string>
    <string name="content_desc_faction_image">Faction image: %1$s</string>
</resources>